--- a/ansible/ybapostcontroller/yba-db.yaml
+++ b/ansible/ybapostcontroller/yba-db.yaml
@@ -78,11 +78,11 @@
       ignore_errors: true
 
     ## 2. Set Ownership for Yugabyte Directories
-    - name: Set Yugabyte data directories ownership to yugabyte:yugabyte recursively
+    - name: Set Yugabyte data directories ownership to ybaadmin:ybaadmin recursively
       ansible.builtin.file:
         path: "/mnt/{{ item }}"
-        owner: yugabyte
-        group: yugabyte
+        owner: ybaadmin
+        group: ybaadmin
         state: directory
         recurse: yes
       loop:
