--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ terraform.tfstate
 terraform.tfstate.*
 crash.log
 crash.*.log
-*.tfvars
-*.tfvars.json
+# *.tfvars
+# *.tfvars.json
 override.tf
 override.tf.json
 *_override.tf
